fix wrap

--- a/src/components/OurOffice/components/LeftContent/LeftContent.module.scss
+++ b/src/components/OurOffice/components/LeftContent/LeftContent.module.scss
@@ -5,6 +5,7 @@
 
   @media (max-width: 650px) {
     flex-direction: row;
+    flex-wrap: wrap;
   }
 
   div {
